Increase top spacing for fixed header

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+    scroll-padding-top: 110px;
+}
+
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
@@ -25,7 +29,7 @@ header {
     align-items: center;
 }
 main {
-    margin-top: 90px;
+    margin-top: 110px;
     max-width: 700px;
     margin-left: auto;
     margin-right: auto;
